--- a/html/creditos.html
+++ b/html/creditos.html
@@ -31,7 +31,7 @@
     </main>
     <div id="caixabotoescreditos">
       <button class="botoescreditos" id="jogarbotaocreditos" onclick="atualizarpag('jogar')">Jogar</button>
-      <button class="botoescreditos" id="voltarbotaocreditos" onclick="atualizarpag('../inicial')">Voltar</button>
+      <button class="botoescreditos" id="voltarbotaocreditos" onclick="atualizarpag('../index')">Voltar</button>
     </div>
     <script src="../js/script.js"></script>
 </body>
